homelab/qb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
    role: server
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: qbittorrent
      role: server
  template:
    metadata:
      labels:
        app: qbittorrent
        role: server
    spec:
      tolerations:
        - key: valerauko.net/local
          operator: Exists
          effect: NoSchedule
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: server
          image: qbittorrentofficial/qbittorrent-nox:5.2.3-1
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /tmp
              name: qtmp
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: downloads
          hostPath:
            path: /media/hinoki/Downloads
        - name: qtmp
          emptyDir:
            sizeLimit: 1Gi
            medium: Memory
