homelab/qb/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
    role: server
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
    - port: 6881
      targetPort: trnt
      protocol: TCP
      name: trnt-tcp
    - port: 6881
      targetPort: trnt
      protocol: UDP
      name: trnt-udp
  selector:
    app: qbittorrent
    role: server

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
    role: server
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - torrent.dekiru.tech
      secretName: dekiru-tech-tls
  rules:
    - host: torrent.dekiru.tech
      http:
        paths:
          - backend:
              service:
                name: qbittorrent
                port:
                  name: http
            path: /
            pathType: Prefix
